--- a/app/src/main/res/layout/fragment_hot_deal.xml
+++ b/app/src/main/res/layout/fragment_hot_deal.xml
@@ -7,11 +7,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <include layout="@layout/near_me_list"/>
+            <include layout="@layout/near_me_list"/>
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="vertical"></LinearLayout>
     </LinearLayout>
 
 </ScrollView>
