--- a/app/src/main/res/layout/activity_goi_ycho_ban.xml
+++ b/app/src/main/res/layout/activity_goi_ycho_ban.xml
@@ -23,7 +23,7 @@
             android:id="@+id/imgGoiYChoBan"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="120dp"
             android:orientation="vertical"
             android:paddingLeft="15dp"
             android:gravity="center_vertical">
@@ -64,6 +64,29 @@
                     android:textColor="@color/colorRed"
                     />
             </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đánh giá:"/>
+
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4.5"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="2dp"
+                    android:progressTint="#FCE903"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:isIndicator="true"
+                    android:max="5"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <View
@@ -82,7 +105,10 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/billiard1"/>
+            android:src="@drawable/billiard1"
+            android:clickable="true"
+            android:onClick="clickToDatBanImg"
+            android:id="@id/imgGoiYChoBan"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -125,6 +151,29 @@
                     android:textSize="15dp"
                     android:textColor="@color/colorRed"/>
             </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đánh giá:"/>
+
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4.5"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="2dp"
+                    android:progressTint="#FCE903"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:isIndicator="true"
+                    android:max="5"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <View
@@ -143,7 +192,10 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/billiard2"/>
+            android:src="@drawable/billiard2"
+            android:clickable="true"
+            android:onClick="clickToDatBanImg"
+            android:id="@id/imgGoiYChoBan"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -186,6 +238,29 @@
                     android:textSize="15dp"
                     android:textColor="@color/colorRed"/>
             </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đánh giá:"/>
+
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4.5"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="2dp"
+                    android:progressTint="#FCE903"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:isIndicator="true"
+                    android:max="5"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <View
@@ -204,7 +279,10 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/expensive_billiard6"/>
+            android:src="@drawable/expensive_billiard1"
+            android:clickable="true"
+            android:onClick="clickToDatBanImg"
+            android:id="@id/imgGoiYChoBan"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -247,6 +325,29 @@
                     android:textSize="15dp"
                     android:textColor="@color/colorRed"/>
             </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đánh giá:"/>
+
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4.5"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="2dp"
+                    android:progressTint="#FCE903"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:isIndicator="true"
+                    android:max="5"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <View
@@ -265,7 +366,10 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/expensive_billiard2"/>
+            android:src="@drawable/expensive_billiard2"
+            android:clickable="true"
+            android:onClick="clickToDatBanImg"
+            android:id="@id/imgGoiYChoBan"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -307,6 +411,29 @@
                     android:text=" Uư đãi các ngày trong tuần"
                     android:textSize="15dp"
                     android:textColor="@color/colorRed"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đánh giá:"/>
+
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4.5"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="2dp"
+                    android:progressTint="#FCE903"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:isIndicator="true"
+                    android:max="5"
+                    />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
