--- a/app/src/main/res/layout/fragment_near_me.xml
+++ b/app/src/main/res/layout/fragment_near_me.xml
@@ -26,14 +26,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/frame_nearMe"
+                    android:layout_marginBottom="60dp"
                     >
                 </FrameLayout>
+                <!--<TextView-->
+                    <!--android:layout_width="fill_parent"-->
+                    <!--android:layout_height="120dp"-->
+                    <!--android:textStyle="bold" />-->
             </LinearLayout>
         </ScrollView>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="60dp"
-            android:textStyle="bold" />
+
 
     </LinearLayout>
 
