--- a/app/src/main/res/layout/uudaihot_list.xml
+++ b/app/src/main/res/layout/uudaihot_list.xml
@@ -9,25 +9,26 @@
     android:padding="10dp">
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="150dp"
         android:layout_columnWeight="1"
         android:orientation="horizontal"
         android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        >
         <LinearLayout
             android:layout_width="150dp"
-            android:layout_height="120dp"
+            android:layout_height="140dp"
             android:layout_gravity="fill_horizontal"
             android:orientation="vertical"
             android:background="@color/colorWhite">
 
             <ImageView
                 android:layout_width="150dp"
-                android:layout_height="80dp"
+                android:layout_height="100dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/billiard2"
+                android:src="@drawable/expensive_billiard6"
                 android:id="@+id/imgDetail"
                 android:clickable="true"
                 android:onClick="clicktoviewdetailByNear"/>
@@ -86,12 +87,42 @@
                         android:textSize="15dp"
                         android:textColor="@color/colorRed"
                         />
+
                 </LinearLayout>
+                <!--rating-->
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/colorBlack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Đánh giá:"/>
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:rating="4.5"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="2dp"
+                        android:progressTint="#FCE903"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:isIndicator="true"
+                        android:max="5"
+
+                        />
+
+                </LinearLayout>
+                <!--end rating-->
+
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="3dp"
+                android:background="@color/colorGreen"
                 />
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.MaterialComponents.Button.TextButton"
@@ -105,7 +136,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="130dp"
+        android:layout_height="150dp"
         android:layout_columnWeight="1"
         android:orientation="horizontal"
         android:background="@color/colorWhite"
@@ -113,14 +144,14 @@
         android:paddingTop="10dp">
         <LinearLayout
             android:layout_width="150dp"
-            android:layout_height="120dp"
+            android:layout_height="150dp"
             android:layout_gravity="fill_horizontal"
             android:orientation="vertical"
             android:background="@color/colorWhite">
 
             <ImageView
                 android:layout_width="150dp"
-                android:layout_height="80dp"
+                android:layout_height="100dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
@@ -184,107 +215,36 @@
                         android:textColor="@color/colorRed"
                         />
                 </LinearLayout>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="3dp"
-                />
-            <com.google.android.material.button.MaterialButton
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/t_b_n"
-                android:layout_gravity="center"
-                android:onClick="clickToDatBan"/>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="130dp"
-        android:layout_columnWeight="1"
-        android:orientation="horizontal"
-        android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp"
-        android:paddingTop="10dp">
-        <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="120dp"
-            android:layout_gravity="fill_horizontal"
-            android:orientation="vertical"
-            android:background="@color/colorWhite">
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="80dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/billiard4"
-                android:clickable="true"
-                android:id="@id/imgDetail"
-                android:onClick="clicktoviewdetailByNear"/>
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:text="30.000 -\n 55.000 bàn/giờ"
-                android:gravity="center"
-                android:textColor="@color/colorBlack"
-                android:textSize="10dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingLeft="15dp"
-                android:gravity="center_vertical">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
-                    android:textColor="@color/colorBlack"
-                    />
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:src="@drawable/ic_access_time_black_24dp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="10 phút nữa - 3.3 km"
-                        android:textColor="@color/colorBlack"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:background="@color/colorWhite">
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/tag"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                     <TextView
+                        android:textColor="@color/colorBlack"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=" Uư đãi các ngày trong tuần"
-                        android:textSize="15dp"
-                        android:textColor="@color/colorRed"
+                        android:text="Đánh giá:"/>
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:rating="4.5"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="2dp"
+                        android:progressTint="#FCE903"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:isIndicator="true"
+                        android:max="5"
                         />
+
                 </LinearLayout>
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="3dp"
+                android:background="@color/colorGreen"
                 />
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.MaterialComponents.Button.TextButton"
@@ -297,7 +257,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="130dp"
+        android:layout_height="150dp"
         android:layout_columnWeight="1"
         android:orientation="horizontal"
         android:background="@color/colorWhite"
@@ -305,14 +265,14 @@
         android:paddingTop="10dp">
         <LinearLayout
             android:layout_width="150dp"
-            android:layout_height="120dp"
+            android:layout_height="150dp"
             android:layout_gravity="fill_horizontal"
             android:orientation="vertical"
             android:background="@color/colorWhite">
 
             <ImageView
                 android:layout_width="150dp"
-                android:layout_height="80dp"
+                android:layout_height="100dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
@@ -376,11 +336,36 @@
                         android:textColor="@color/colorRed"
                         />
                 </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/colorBlack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Đánh giá:"/>
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:rating="4.5"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="2dp"
+                        android:progressTint="#FCE903"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:isIndicator="true"
+                        android:max="5"
+                        />
+
+                </LinearLayout>
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="3dp"
+                android:background="@color/colorGreen"
                 />
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.MaterialComponents.Button.TextButton"
@@ -393,16 +378,124 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="150dp"
         android:layout_columnWeight="1"
         android:orientation="horizontal"
         android:background="@color/colorWhite"
         android:layout_marginBottom="5dp"
         android:paddingTop="10dp">
+        <LinearLayout
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="fill_horizontal"
+            android:orientation="vertical"
+            android:background="@color/colorWhite">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/expensive_billiard1"
+                android:clickable="true"
+                android:id="@id/imgDetail"
+                android:onClick="clicktoviewdetailByNear"/>
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="40dp"
+                android:text="30.000 -\n 55.000 bàn/giờ"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"
+                android:textSize="10dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="15dp"
+                android:gravity="center_vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                    android:textColor="@color/colorBlack"
+                    />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_access_time_black_24dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10 phút nữa - 3.3 km"
+                        android:textColor="@color/colorBlack"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:background="@color/colorWhite">
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/tag"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" Uư đãi các ngày trong tuần"
+                        android:textSize="15dp"
+                        android:textColor="@color/colorRed"
+                        />
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/colorBlack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Đánh giá:"/>
+
+                    <RatingBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:rating="4.5"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="2dp"
+                        android:progressTint="#FCE903"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:isIndicator="true"
+                        android:max="5"
+                        />
+
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="3dp"
+                android:background="@color/colorGreen"
+                />
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/t_b_n"
+                android:layout_gravity="center"
+                android:onClick="clickToDatBan"/>
+        </LinearLayout>
     </LinearLayout>
-
-
-
-
 
 </GridLayout>
