--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,17 +25,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="ID: 123456789"
+        android:text="ID: "
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="15dp"
-
+        android:id="@+id/txtId"
         android:textColor="@color/colorBlack"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Đen Văn Vâu"
         android:textColor="@color/colorBlack"
         android:textSize="15dp"
          />
