--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
-    tools:context=".LoginActivity">
+    android:paddingLeft="20dp"
+    tools:context=".LoginActivity"
+    android:background="#46b725">
 
     <TextView
         android:layout_width="match_parent"
@@ -15,63 +16,65 @@
         android:textSize="45dp"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:gravity="center"
-        android:paddingBottom="70dp"
+        android:paddingLeft="15dp"
+        android:paddingBottom="50dp"
         android:paddingTop="110dp"
         />
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Chào mừng bạn !"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorWhite"
+        android:paddingLeft="15dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mời bạn đăng nhập để tiếp tục"
+        android:textColor="@color/colorWhite"
+        android:textSize="18dp"
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="15dp"
+        android:layout_marginTop="10dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="15dp">
     <com.google.android.material.button.MaterialButton
-        android:layout_width="260dp"
+        android:layout_width="160dp"
         android:layout_height="60dp"
-        android:text="LOGIN WITH GOOGLE"
+        android:text="EMAIL"
         android:textStyle="bold"
         android:textSize="15dp"
         android:textColor="@color/colorWhite"
         android:backgroundTint="@color/colorRed"
         app:icon="@drawable/google"
         app:iconSize="30dp"
-        android:layout_gravity="center"
+        android:layout_marginRight="25dp"
         android:onClick="clickToHome"
         android:id="@+id/btnLogin"
         />
 
+
+
     <com.google.android.material.button.MaterialButton
-        android:layout_width="260dp"
+        android:layout_width="160dp"
         android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:backgroundTint="#3F51B5"
-        android:text="LOGIN WITH FACEBOOK"
-        android:textColor="@color/colorWhite"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:icon="@drawable/facebook"
-        app:iconSize="30dp"
-        android:id="@id/btnLogin"
-        android:onClick="clickToHome"
-        />
-
-
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
         android:id="@+id/login"
-        android:text="Phone Login"
+        app:icon="@drawable/phoneicon"
+        app:iconSize="30dp"
+        android:text="ĐIỆN THOẠI"
         android:textColor="#fff"
-        android:background="#0099ff"
+        android:backgroundTint="#3F51B5"
         android:textAllCaps="false"
-        android:layout_gravity="center"
-        />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/logout"
-        android:text="Logout"
-        android:textColor="#fff"
-        android:background="#ff9900"
-        android:textAllCaps="false"
-        android:onClick="logout"
-        android:visibility="gone"/>
+        />
+    </LinearLayout>
 
 </LinearLayout>
