--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,25 @@
     <style name="AppTheme.RoundedCornerMaterialButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/rounded_shape</item>
     </style>
+
+
+    <style name="AppLoginTheme" parent="Theme.AccountKit">
+
+        <item name="com_accountkit_primary_color">@color/colorAccent</item>
+
+        <!--Status bar Color-->
+        <item name="com_accountkit_status_bar_color">@color/colorPrimaryDark</item>
+
+        <!--Button-->
+        <item name="com_accountkit_button_disabled_background_color">@color/colarPrimaryLight</item>
+        <item name="com_accountkit_button_disabled_text_color">@color/colorBlack</item>
+
+        <item name="com_accountkit_button_background_color">@color/colarPrimaryLight</item>
+
+        <!--Input Field-->
+        <item name="com_accountkit_input_background_color">@android:color/transparent</item>
+        <item name="com_accountkit_input_text_color">@color/colorBlack</item>
+        <item name="com_accountkit_input_border_color">@color/colarPrimaryLight</item>
+
+    </style>
 </resources>
