--- a/app/src/main/res/layout/activity_dat_ban.xml
+++ b/app/src/main/res/layout/activity_dat_ban.xml
@@ -208,7 +208,8 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_navigate_before_black_24dp"
-                        android:layout_gravity="center" />
+                        android:layout_gravity="center"
+                        android:id="@+id/imgDateBack"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -225,6 +226,7 @@
                         android:layout_height="30dp"
                         android:src="@drawable/ic_navigate_next_black_24dp"
                         android:layout_gravity="center"
+                        android:id="@+id/imgDateNext"
                         />
                 </LinearLayout>
                 <View
